# mattilda-test

./: .env  .env.docker  .env.prod  .gitignore  AUTHENTICATION_SUMMARY.md  DB_IMPLEMENTATION_SUMMARY.md  DEVELOPMENT.md  DOCKER.md  DOCKER_SUMMARY.md  Dockerfile  INVOICE_API_EXAMPLES.md  Makefile  QUICKSTART.md  README.md  SCHOOL_API_EXAMPLES.md  SECRET_KEY_CONFIGURATION.md  STUDENT_API_EXAMPLES.md  TESTING.md  TOKEN_EXPIRATION_CONFIG.md  UNIT_TESTS_SUMMARY.md  docker-compose.dev.yml  main.py  pyproject.toml  requirements.txt  run_tests.py  setup_env.py  start-dev.sh  test-docker.sh  test_caching.py
app/: database.py  main.py  models.py  seed_data.py
app/api/: main.py
app/api/routes/: invoice.py  school.py  student.py
app/application/dtos/: invoice_dto.py  school_dto.py  student_dto.py
app/application/services/: invoice_service.py  school_service.py  student_service.py
app/core/: cache.py  config.py  dependencies.py  pagination.py
app/domain/: enums.py
app/domain/entities/: invoice.py  school.py  student.py
app/domain/models/: __init__.py  invoice.py  school.py  student.py  user.py
app/domain/repositories/: invoice_repository.py  school_repository.py  student_repository.py  user_repository.py
app/infrastructure/database/: seed_data.py
backend/: .dockerignore  .env.docker  .env.prod  Dockerfile.dev  Dockerfile.prod  Makefile  docker-compose.prod.yml  docker-compose.yml
backend/app/: main.py
backend/app/core/: auth.py  (+1 more)
docker/init-db/: 01-init.sh
frontend/: Dockerfile.dev  package-lock.json  package.json
frontend/src/: App.tsx  main.tsx
(+72 files in other folders)
